Fixed flickering LOADING animation. Changed z-index.

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -273,7 +273,7 @@ p {
   padding: 1em;
   width: 200px;
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   left: 50%;
   top: 50%;
   transform: translate(-100px, -111px);
